--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -442,6 +442,15 @@ header {
       img {
         position: absolute;
         z-index: 2;
+        height: auto;
+        width: 120%;
+        max-width: 120%;;
+      }
+      video{
+        position: absolute;
+        z-index: 2;
+        width: 120%;
+        height: auto;
       }
     }
   }
