--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -516,6 +516,15 @@ header div.mid .hero svg {
 header div.mid .hero img {
   position: absolute;
   z-index: 2;
+  height: auto;
+  width: 120%;
+  max-width: 120%;
+}
+header div.mid .hero video {
+  position: absolute;
+  z-index: 2;
+  width: 120%;
+  height: auto;
 }
 header .right {
   display: flex;
