--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -444,12 +444,13 @@ header {
         z-index: 2;
         height: auto;
         width: 120%;
-        max-width: 120%;;
+        max-width: 120%;
+        display: none;
       }
       video{
         position: absolute;
         z-index: 2;
-        width: 120%;
+        width: 140%;
         height: auto;
       }
     }
@@ -1790,8 +1791,6 @@ footer {
       justify-content: center;
       align-items: flex-end;
 
-      .bg {}
-
       .hero {
         height: 100%;
         position: relative;
@@ -1803,6 +1802,10 @@ footer {
         img {
           height: auto;
           width: 70%;
+        }
+        video{
+          height: auto;
+          width: 160%;
         }
       }
     }
@@ -2092,6 +2095,12 @@ footer {
 
     .mid {
       width: 50%;
+      .hero{
+        video{
+          width: 140%!important;
+        }
+      }
+
     }
   }
 
@@ -2394,7 +2403,8 @@ footer {
     div.main {
       flex-direction: column-reverse;
       justify-content: flex-end;
-
+      padding-top: 15%;
+      
       div.mid {
         width: 100%;
         height: 60%;
@@ -2412,6 +2422,9 @@ footer {
           img {
             width: 80%;
             height: auto;
+          }
+          video{
+            width: 170%!important;
           }
         }
       }
@@ -2716,8 +2729,12 @@ footer {
           }
 
           img {
-            width: 55%;
+            display: block;
+            width: 100%;
             height: auto;
+          }
+          video{
+            display: none;
           }
         }
       }
