--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -443,14 +443,14 @@ header {
         position: absolute;
         z-index: 2;
         height: auto;
-        width: 120%;
+        width: 100%;
         max-width: 120%;
         display: none;
       }
       video{
         position: absolute;
         z-index: 2;
-        width: 140%;
+        width: 100%;
         height: auto;
       }
     }
@@ -1793,10 +1793,11 @@ footer {
 
       .hero {
         height: 100%;
+        width: 100%;
         position: relative;
 
         svg {
-          width: 70%;
+          width: 100%;
         }
 
         img {
@@ -1805,13 +1806,17 @@ footer {
         }
         video{
           height: auto;
-          width: 160%;
+          width: 85%;
         }
       }
     }
 
     .right {
       gap: 5%;
+      width: 50%;
+      p{
+        width: 80%;
+      }
     }
 
     .divider {
@@ -2096,8 +2101,11 @@ footer {
     .mid {
       width: 50%;
       .hero{
+        svg{
+          width: 60%!important;
+        }
         video{
-          width: 140%!important;
+          width: 100%!important;
         }
       }
 
@@ -2404,7 +2412,7 @@ footer {
       flex-direction: column-reverse;
       justify-content: flex-end;
       padding-top: 15%;
-      
+
       div.mid {
         width: 100%;
         height: 60%;
@@ -2424,7 +2432,7 @@ footer {
             height: auto;
           }
           video{
-            width: 170%!important;
+            width: 60%!important;
           }
         }
       }
