--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -501,8 +501,10 @@ header {
       &:hover {
         transform: translateY(-20%);
         border: 2px solid @luxant;
-        background-color: transparent;
         box-shadow: -1px 8px 6px 0px rgba(0, 0, 0, 0.1);
+      }
+      &:active{
+        background: transparent;
       }
     }
   }
