--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -371,8 +371,8 @@ header .reserve a {
   font-family: 'krub', sans-serif;
   font-weight: 700;
   font-size: 1rem;
-  border: 1.2px solid #18181800;
-  background-color: #d6bb74;
+  border: 2px solid #d6bb73;
+  background: #d6bb73;
   padding: 1% 1.5%;
   letter-spacing: 1px;
   position: absolute;
@@ -386,7 +386,6 @@ header .reserve a:hover {
 }
 header .reserve a:active {
   background: transparent;
-  border: 1.2px solid #d6bb74;
 }
 header div.nav {
   height: 8%;
@@ -578,7 +577,6 @@ header .right a:hover {
 header .right a:active {
   background: transparent;
 }
-
 header .divider {
   padding: 0% 10%;
   height: 10vh;
@@ -1238,24 +1236,6 @@ section.video div.content div.container .vid {
   display: flex;
   justify-content: center;
   position: relative;
-}
-section.video div.content div.container .vid::after {
-  content: "";
-  background-image: url(../assets/img/video.png);
-  position: absolute;
-  background-size: cover;
-  background-position: center;
-  pointer-events: none;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
-}
-section.video div.content div.container .vid.hide-overlay::after {
-  opacity: 0;
-  visibility: hidden;
 }
 section.video div.content div.container video {
   border-radius: 10px;
@@ -2919,8 +2899,4 @@ footer .content .right form .checkbox-container label {
   margin: auto;
   color: #4caf50;
   margin-bottom: 10px;
-}
-
-.grecaptcha-badge {
-  visibility: hidden;
 }
