--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -130,7 +130,7 @@ div.loader {
   transition: opacity 1s ease-out; /* Transition douce */
   opacity: 1;
   video{
-    // width: 60%;
+    width: 60%;
     height: auto;
   }
   img{
