--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2475,6 +2475,7 @@ footer {
         text-align: center;
         width: 100%;
         padding: 0;
+        justify-content: center;
 
         p {
           text-align: center;
