--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2151,6 +2151,9 @@ footer {
         video{
           width: 85%!important;
         }
+        img{
+          width: 90%;
+        }
       }
     }
   }
