--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -1858,7 +1858,7 @@ footer .content .right form .checkbox-container label {
     width: 85%!important;
   }
   header .mid .hero img {
-    width: 90%;
+    width: 90%!important;
   }
   section.target .topline {
     width: 100% !important;
