--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2152,7 +2152,7 @@ footer {
           width: 85%!important;
         }
         img{
-          width: 90%;
+          width: 90%!important;
         }
       }
     }
