--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -447,9 +447,9 @@ header {
       img {
         position: absolute;
         z-index: 2;
-        height: auto;
-        width: 100%;
-        max-width: 120%;
+        // height: auto;
+        // width: 100%;
+        // max-width: 120%;
         display: none;
       }
       video{
@@ -1835,10 +1835,10 @@ footer {
           width: 100%;
         }
 
-        img {
-          height: auto;
-          width: 70%;
-        }
+        // img {
+        //   height: auto;
+        //   width: 70%;
+        // }
         video{
           height: auto;
           width: 85%;
@@ -2150,9 +2150,6 @@ footer {
       .hero{
         video{
           width: 85%!important;
-        }
-        img{
-          width: 120%!important;
         }
       }
     }
@@ -2787,8 +2784,8 @@ footer {
 
           img {
             display: block;
-            width: 75%;
-            height: auto;
+            // width: 75%;
+            // height: auto;
           }
           video{
             display: none;
