--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -449,7 +449,7 @@ header {
         z-index: 2;
         // height: auto;
         // width: 100%;
-        // max-width: 120%;
+        max-width: 150%!important;
         display: none;
       }
       video{
