--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2150,6 +2150,10 @@ footer {
         video{
           width: 85%!important;
         }
+        img{
+          display: block!important;
+          width: 70%;
+        }
       }
     }
   }
@@ -2459,7 +2463,7 @@ footer {
           }
 
           img {
-            width: 80%;
+            width: 35%;
             height: auto;
           }
           video{
@@ -2783,8 +2787,8 @@ footer {
 
           img {
             display: block;
-            // width: 75%;
-            // height: auto;
+            width: 70%;
+            height: auto;
           }
           video{
             display: none;
