--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2148,7 +2148,8 @@ footer {
       width: 100%;
       .hero{
         video{
-          width: 85%!important;
+          // width: 85%!important;
+          display: none;
         }
         img{
           display: block!important;
