--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -1845,7 +1845,7 @@ footer .content .right form .checkbox-container label {
     display: none;
   }
   header .mid {
-    width: 100%;
+    width: 100%!important;
   }
   header .mid .hero video {
     display: none;
@@ -2066,20 +2066,20 @@ footer .content .right form .checkbox-container label {
   }
   header div.main div.mid {
     width: 100%;
-    height: 60%;
+    height: 100%;
     background-color: #ffffff;
     align-items: flex-end;
   }
   header div.main div.mid .hero {
-    height: 90%;
+    height: 100%;
   }
   header div.main div.mid .hero svg {
     width: auto;
     height: 80%;
   }
   header div.main div.mid .hero img {
-    width: 35%;
     height: auto;
+    width: 100%;
   }
   header div.main div.mid .hero video {
     width: 40%!important;
