--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2145,7 +2145,7 @@ footer {
     }
 
     .mid {
-      width: 100%;
+      width: 100%!important;
       .hero{
         video{
           // width: 85%!important;
@@ -2451,12 +2451,12 @@ footer {
 
       div.mid {
         width: 100%;
-        height: 60%;
+        height: 100%;
         background-color: #ffffff;
         align-items: flex-end;
 
         .hero {
-          height: 90%;
+          height: 100%;
 
           svg {
             width: auto;
@@ -2464,8 +2464,8 @@ footer {
           }
 
           img {
-            width: 35%;
             height: auto;
+            width: 100%;
           }
           video{
             width: 40%!important;
