--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -2153,7 +2153,8 @@ footer {
         }
         img{
           display: block!important;
-          width: 70%;
+          width: 50%;
+          max-width: 50%;
         }
       }
     }
@@ -2466,6 +2467,7 @@ footer {
           img {
             height: auto;
             width: 100%;
+            max-width: 70%;
           }
           video{
             width: 40%!important;
@@ -2788,7 +2790,8 @@ footer {
 
           img {
             display: block;
-            width: 70%;
+            width: 100%;
+            max-width: 100%;
             height: auto;
           }
           video{
