--- a/style.css
+++ b/style.css
@@ -62,15 +62,16 @@ html {
     right: 0;
     color: #FFF;
     text-align: center;
-    font-family: "lato", sans-serif;
-    font-weight: 400;
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
     font-size: 5rem;
     letter-spacing: 10px;
     margin-top: -80px;
     padding-left: 10px;
   }
   #title span {
-    background: -webkit-linear-gradient(white, #38495a);
+    background: -webkit-linear-gradient(white, #ff4c16);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
